--- a/bitnami/mysql/values.yaml
+++ b/bitnami/mysql/values.yaml
@@ -39,6 +39,9 @@ securityContext:
   fsGroup: 1001
   runAsUser: 1001
 
+# Cluster domain
+domain: cluster.local
+
 root:
   ## MySQL admin password
   ## ref: https://github.com/bitnami/bitnami-docker-mysql#setting-the-root-password-on-first-run
