Change domain by clusterDomain
Signed-off-by: Miguel A. Cabrera Minagorri <macabrera@bitnami.com>

--- a/bitnami/kafka/values-production.yaml
+++ b/bitnami/kafka/values-production.yaml
@@ -223,7 +223,7 @@ securityContext:
   runAsUser: 1001
 
 # Cluster domain
-domain: cluster.local
+clusterDomain: cluster.local
 
 ## Kubernetes configuration
 ## For minikube, set this to NodePort, elsewhere use LoadBalancer
