--- a/bitnami/consul/values.yaml
+++ b/bitnami/consul/values.yaml
@@ -47,7 +47,7 @@ securityContext:
   runAsUser: 1001
 
 # Cluster domain
-domain: cluster.local
+clusterDomain: cluster.local
 
 ## Datacenter name for consul. If not supplied, will use the consul
 ## default 'dc1'
