--- a/bitnami/kafka/templates/statefulset.yaml
+++ b/bitnami/kafka/templates/statefulset.yaml
@@ -113,6 +113,10 @@ spec:
         - name: KAFKA_INTER_BROKER_LISTENER_NAME
           value: {{ .Values.interBrokerListenerName }}
         {{- end }}
+        {{- if .Values.metrics.jmx.enabled }}
+        - name: JMX_PORT
+          value: {{ .Values.metrics.jmx.jmxPort | quote }}
+        {{- end }}
         {{- if .Values.auth.enabled }}
         - name: KAFKA_OPTS
           value: "-Djava.security.auth.login.config=/opt/bitnami/kafka/conf/kafka_jaas.conf"
@@ -130,10 +134,6 @@ spec:
             secretKeyRef:
               name: {{ if .Values.auth.existingSecret }}{{ .Values.auth.existingSecret }}{{ else }}{{ template "kafka.fullname" . }}{{ end }}
               key: kafka-inter-broker-password
-        {{ if .Values.metrics.jmx.enabled }}
-        - name: JMX_PORT
-          value: {{ .Values.metrics.jmx.jmxPort | quote }}
-        {{- end }}
         {{- if .Values.auth.zookeeperUser }}
         - name: KAFKA_ZOOKEEPER_USER
           value: {{ .Values.auth.zookeeperUser | quote }}
