--- a/bitnami/harbor/templates/jobservice/jobservice-pvc.yaml
+++ b/bitnami/harbor/templates/jobservice/jobservice-pvc.yaml
@@ -4,7 +4,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "harbor.jobservice" . }}
+  name: "{{ template "harbor.jobservice" . }}"
   {{- if eq .Values.persistence.resourcePolicy "keep" }}
   annotations:
     helm.sh/resource-policy: keep
