--- a/bitnami/harbor/templates/clair/clair-cm.yaml
+++ b/bitnami/harbor/templates/clair/clair-cm.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "harbor.clair" . }}
+  name: "{{ template "harbor.clair" . }}"
   labels:
     {{ include "harbor.labels" . | nindent 4 }}
     app.kubernetes.io/component: clair
