--- a/bitnami/harbor/templates/core/core-cm.yaml
+++ b/bitnami/harbor/templates/core/core-cm.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "harbor.core" . }}
+  name: "{{ template "harbor.core" . }}"
   labels: {{ include "harbor.labels" . | nindent 4 }}
 data:
   app.conf: |+
