--- a/bitnami/harbor/templates/core/core-secret.yaml
+++ b/bitnami/harbor/templates/core/core-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "harbor.core" . }}
+  name: "{{ template "harbor.core" . }}"
   labels: {{ include "harbor.labels" . | nindent 4 }}
 type: Opaque
 data:
