--- a/bitnami/harbor/templates/core/core-svc.yaml
+++ b/bitnami/harbor/templates/core/core-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "harbor.core" . }}
+  name: "{{ template "harbor.core" . }}"
   labels: {{ include "harbor.labels" . | nindent 4 }}
 spec:
   {{- if  (eq .Values.service.ingress.controller "gce") }}
