--- a/bitnami/harbor/templates/nginx/secret.yaml
+++ b/bitnami/harbor/templates/nginx/secret.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "harbor.nginx" . }}
+  name: "{{ template "harbor.nginx" . }}"
   labels: {{ include "harbor.labels" . | nindent 4 }}
 type: Opaque
 data:
