--- a/bitnami/harbor/templates/notary/notary-cm.yaml
+++ b/bitnami/harbor/templates/notary/notary-cm.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "harbor.notary-server" . }}
+  name: "{{ template "harbor.notary-server" . }}"
   labels: {{ include "harbor.labels" . | nindent 4 }}
     component: notary
 data:
