--- a/bitnami/harbor/templates/notary/notary-signer.yaml
+++ b/bitnami/harbor/templates/notary/notary-signer.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "harbor.notary-signer" . }}
+  name: "{{ template "harbor.notary-signer" . }}"
   labels: {{ include "harbor.labels" . | nindent 4 }}
     component: notary-signer
 spec:
@@ -24,7 +24,7 @@ spec:
       {{- end }}
       containers:
       - name: notary-signer
-        image: {{ template "harbor.notarySignerImage" . }}
+        image: "{{ template "harbor.notarySignerImage" . }}"
         imagePullPolicy: {{ .Values.notarySignerImage.pullPolicy }}
         {{- if .Values.notary.signer.resources }}
         resources:
@@ -36,7 +36,7 @@ spec:
         - name: MIGRATIONS_PATH
           value: migrations/signer/postgresql
         - name: DB_URL
-          value: {{ template "harbor.database.notarySigner" . }}
+          value: "{{ template "harbor.database.notarySigner" . }}"
         - name: NOTARY_SIGNER_DEFAULTALIAS
           value: defaultalias
         volumeMounts:
@@ -56,7 +56,7 @@ spec:
       volumes:
       - name: notary-config
         configMap:
-          name: {{ template "harbor.notary-server" . }}
+          name: "{{ template "harbor.notary-server" . }}"
       {{- if .Values.notary.secretName }}
       - name: notary-cert
         secret:
