--- a/bitnami/harbor/templates/notary/notary-svc.yaml
+++ b/bitnami/harbor/templates/notary/notary-svc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "harbor.notary-server" . }}
+  name: "{{ template "harbor.notary-server" . }}"
   labels: {{ include "harbor.labels" . | nindent 4 }}
 spec:
 {{- if (eq .Values.service.ingress.controller "gce") }}
@@ -18,7 +18,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "harbor.notary-signer" . }}
+  name: "{{ template "harbor.notary-signer" . }}"
   labels: {{ include "harbor.labels" . | nindent 4 }}
 spec:
   ports:
