--- a/bitnami/harbor/templates/registry/registry-pvc.yaml
+++ b/bitnami/harbor/templates/registry/registry-pvc.yaml
@@ -4,7 +4,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "harbor.registry" . }}
+  name: "{{ template "harbor.registry" . }}"
   {{- if eq .Values.persistence.resourcePolicy "keep" }}
   annotations:
     helm.sh/resource-policy: keep
