Add Juan suggestions

--- a/bitnami/harbor/templates/core/core-secret.yaml
+++ b/bitnami/harbor/templates/core/core-secret.yaml
@@ -8,16 +8,16 @@ data:
   {{- if .Values.secretKey }}
   secretKey: {{ .Values.secretKey | b64enc | quote }}
   {{- else if (not .Values.forcePassword) }}
-  secretKey: "{{ randAlphaNum 16 | b64enc }}"
-  {{ else }}
+  secretKey: {{ randAlphaNum 16 | b64enc | quote }}
+  {{- else }}
   secretKey: {{ required "A secret key is required!" .Values.secretKey }}
   {{- end }}
 
   {{- if .Values.core.secret }}
   secret: {{ .Values.core.secret | b64enc | quote }}
   {{- else if (not .Values.forcePassword) }}
-  secret: "{{ randAlphaNum 16 | b64enc }}"
-  {{ else }}
+  secret: {{ randAlphaNum 16 | b64enc | quote }}
+  {{- else }}
   secret: {{ required "A secret is required!" .Values.core.secret }}
   {{- end }}
 
