--- a/bitnami/harbor/templates/clair/clair-cm.yaml
+++ b/bitnami/harbor/templates/clair/clair-cm.yaml
@@ -1,10 +1,9 @@
-{{ if .Values.clair.enabled }}
+{{- if .Values.clair.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: "{{ template "harbor.clair" . }}"
-  labels:
-    {{ include "harbor.labels" . | nindent 4 }}
+  labels: {{ include "harbor.labels" . | nindent 4 }}
     app.kubernetes.io/component: clair
 data:
   config.yaml: |
@@ -32,4 +31,4 @@ data:
         renotifyinterval: 2h
         http:
           endpoint: "http://{{ template "harbor.core" . }}/service/notifications/clair"
-{{ end }}
+{{- end }}
