--- a/bitnami/harbor/templates/clair/clair-dpl.yaml
+++ b/bitnami/harbor/templates/clair/clair-dpl.yaml
@@ -1,10 +1,9 @@
-{{ if .Values.clair.enabled }}
+{{- if .Values.clair.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: "{{ template "harbor.clair" . }}"
-  labels:
-    {{ include "harbor.labels" . | nindent 4 }}
+  labels: {{ include "harbor.labels" . | nindent 4 }}
     app.kubernetes.io/component: clair
 spec:
   replicas: {{ .Values.clair.replicas }}
@@ -36,16 +35,22 @@ spec:
           httpGet:
             path: /health
             port: 6061
-          initialDelaySeconds: 30
-          periodSeconds: 10
+          initialDelaySeconds: {{ .Values.clair.livenessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.clair.livenessProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.clair.livenessProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.clair.livenessProbe.successThreshold }}
+          failureThreshold: {{ .Values.clair.livenessProbe.failureThreshold }}
         {{- end }}
         {{- if .Values.clair.readinessProbe.enabled }}
         readinessProbe:
           httpGet:
             path: /health
             port: 6061
-          initialDelaySeconds: 30
-          periodSeconds: 10
+          initialDelaySeconds: {{ .Values.clair.readinessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.clair.readinessProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.clair.readinessProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.clair.readinessProbe.successThreshold }}
+          failureThreshold: {{ .Values.clair.readinessProbe.failureThreshold }}
         {{- end }}
         env:
         - name: BITNAMI_DEBUG
@@ -59,7 +64,7 @@ spec:
           value: {{ .Values.clair.httpsProxy }}
         {{- end }}
         - name: NO_PROXY
-          value: "{{ template "harbor.registry" . }},{{ template "harbor.core" . }}"
+          value: "{{ template "harbor.registry" . }},{{ template "harbor.clair" . }}"
         {{- if .Values.clair.resources }}
         resources:
           {{ toYaml .Values.clair.resources | nindent 10 }}
@@ -75,8 +80,8 @@ spec:
         configMap:
           name: "{{ template "harbor.clair" . }}"
           items:
-            - key: config.yaml
-              path: config.yaml
+          - key: config.yaml
+            path: config.yaml
       {{- with .Values.clair.nodeSelector }}
       nodeSelector: {{ toYaml . | nindent 8 }}
       {{- end }}
@@ -86,4 +91,4 @@ spec:
       {{- with .Values.clair.tolerations }}
       tolerations: {{ tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
-{{ end }}
+{{- end }}
