--- a/bitnami/harbor/templates/clair/clair-svc.yaml
+++ b/bitnami/harbor/templates/clair/clair-svc.yaml
@@ -1,10 +1,9 @@
-{{ if .Values.clair.enabled }}
+{{- if .Values.clair.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
   name: "{{ template "harbor.clair" . }}"
-  labels:
-    {{ include "harbor.labels" . | nindent 4 }}
+  labels: {{ include "harbor.labels" . | nindent 4 }}
     app.kubernetes.io/component: clair
 spec:
   ports:
@@ -15,4 +14,4 @@ spec:
   selector:
     {{ include "harbor.matchLabels" . | nindent 4 }}
     app.kubernetes.io/component: clair
-{{ end }}
+{{- end }}
