--- a/bitnami/harbor/templates/notary/notary-signer.yaml
+++ b/bitnami/harbor/templates/notary/notary-signer.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.notary.enabled }}
+{{- if .Values.notary.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -74,4 +74,4 @@ spec:
       tolerations:
         {{ toYaml . | nindent 8 }}
     {{- end }}
-{{ end }}
+{{- end }}
