Use name of the solution for the main container included in the pod
Signed-off-by: juan131 <juan@bitnami.com>

--- a/bitnami/apache/templates/deployment.yaml
+++ b/bitnami/apache/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         hostnames:
         - "status.localhost"
       containers:
-      - name: {{ template "apache.fullname" . }}
+      - name: apache
         image: "{{ template "apache.image" . }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         ports:
