--- a/bitnami/kubeapps/templates/apprepositories.yaml
+++ b/bitnami/kubeapps/templates/apprepositories.yaml
@@ -25,12 +25,24 @@ metadata:
 spec:
   type: helm
   url: {{ .url }}
-  {{- if $.Values.securityContext.enabled }}
+{{- if or $.Values.securityContext.enabled $.Values.apprepository.initialReposProxy.enabled}}
   syncJobPodTemplate:
     spec:
-      securityContext:
+  {{- if $.Values.apprepository.initialReposProxy.enabled }}
+      containers:
+      - env:
+          - name: https_proxy
+            value: {{ $.Values.apprepository.initialReposProxy.https_proxy }}
+          - name: http_proxy
+            value: {{ $.Values.apprepository.initialReposProxy.http_proxy }}
+          - name: no_proxy
+            value: {{ $.Values.apprepository.initialReposProxy.no_proxy }}
+  {{- end }}
+  {{- if $.Values.securityContext.enabled }}
+        securityContext:
         runAsUser: {{ $.Values.securityContext.runAsUser }}
   {{- end }}
+{{- end }}
   {{- if or .caCert .authorizationHeader }}
   auth:
     {{- if .caCert }}
