--- a/bitnami/apache/templates/svc.yaml
+++ b/bitnami/apache/templates/svc.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ template "apache.fullname" . }}
   labels:
-    app: {{ template "apache.name" . }}
+    app: {{ template "apache.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -29,4 +29,4 @@ spec:
       nodePort: {{ .Values.service.nodePorts.https }}
       {{- end }}
   selector:
-    app: {{ template "apache.name" . }}
+    app: {{ template "apache.fullname" . }}
