--- a/bitnami/tomcat/templates/secrets.yaml
+++ b/bitnami/tomcat/templates/secrets.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: {{ template "tomcat.fullname" . }}
   labels:
-    app: {{ template "tomcat.name" . }}
+    app: {{ template "tomcat.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
