--- a/bitnami/wildfly/templates/svc.yaml
+++ b/bitnami/wildfly/templates/svc.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ template "wildfly.fullname" . }}
   labels:
-    app: {{ template "wildfly.name" . }}
+    app: {{ template "wildfly.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -29,4 +29,4 @@ spec:
     nodePort: {{ .Values.service.nodePorts.mgmt }}
     {{- end }}
   selector:
-    app: {{ template "wildfly.name" . }}
+    app: {{ template "wildfly.fullname" . }}
