--- a/bitnami/magento/values-production.yaml
+++ b/bitnami/magento/values-production.yaml
@@ -172,6 +172,10 @@ elasticsearch:
   ## Whether to deploy a elasticsearch server to use as magento's search engine
   ## To use an external server set this to false and configure the externalElasticsearch parameters
   enabled: true
+  ## Tag for the Bitnami Elasticsearch image to use
+  ## ref: https://github.com/bitnami/bitnami-docker-elasticsearch
+  image:
+    tag: 6.8.1-debian-9-r23
   ## Enable to perform the sysctl operation
   sysctlImage:
     enabled: false
