--- a/bitnami/harbor/values.yaml
+++ b/bitnami/harbor/values.yaml
@@ -231,6 +231,24 @@ nginxImage:
 ##
 # fullnameOverride:
 
+  ## Init containers parameters:
+## volumePermissions: Change the owner and group of the persistent volume mountpoint to runAsUser:fsGroup values from the securityContext section.
+##
+volumePermissions:
+  enabled: false
+  image:
+    registry: docker.io
+    repository: bitnami/minideb
+    tag: latest
+    pullPolicy: Always
+    ## Optionally specify an array of imagePullSecrets.
+    ## Secrets must be manually created in the namespace.
+    ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+    ##
+    # pullSecrets:
+    #   - myRegistryKeySecretName
+  resources: {}
+
 service:
   # Set the way how to expose the service. Set the type as "Ingress",
   # "ClusterIP", "NodePort" or "LoadBalancer" and fill the information
