--- a/bitnami/mysql/templates/master-statefulset.yaml
+++ b/bitnami/mysql/templates/master-statefulset.yaml
@@ -66,6 +66,19 @@ spec:
                   release: "{{ .Release.Name }}"
       {{- end }}
 {{- include "mysql.imagePullSecrets" . | indent 6 }}
+      {{- if and .Values.volumePermissions.enabled .Values.master.persistence.enabled }}
+      initContainers:
+      - name: volume-permissions
+        image: "{{ template "mysql.volumePermissions.image" . }}"
+        imagePullPolicy: {{ default "" .Values.volumePermissions.image.pullPolicy | quote }}
+        command: ["chown", "-R", "{{ .Values.securityContext.runAsUser }}:{{ .Values.securityContext.fsGroup }}", "{{ .Values.master.persistence.mountPath }}"]
+        securityContext:
+          runAsUser: 0
+        resources: {{ toYaml .Values.volumePermissions.resources | nindent 10 -}}
+        volumeMounts:
+        - name: data
+          mountPath: "{{ .Values.master.persistence.mountPath }}"
+      {{- end }}
       containers:
       - name: "mysql"
         image: {{ template "mysql.image" . }}
