--- a/bitnami/wildfly/templates/deployment.yaml
+++ b/bitnami/wildfly/templates/deployment.yaml
@@ -25,6 +25,19 @@ spec:
         runAsUser: {{ .Values.securityContext.runAsUser }}
       {{- end }}
 {{- include "wildfly.imagePullSecrets" . | indent 6 }}
+      {{- if and .Values.volumePermissions.enabled .Values.persistence.enabled }}
+      initContainers:
+      - name: volume-permissions
+        image: "{{ template "wildfly.volumePermissions.image" . }}"
+        imagePullPolicy: {{ default "" .Values.volumePermissions.image.pullPolicy | quote }}
+        command: ["chown", "-R", "{{ .Values.securityContext.runAsUser }}:{{ .Values.securityContext.fsGroup }}", "/bitnami/wildfly"]
+        securityContext:
+          runAsUser: 0
+        resources: {{ toYaml .Values.volumePermissions.resources | nindent 10 -}}
+        volumeMounts:
+        - name: data
+          mountPath: /bitnami/wildfly
+      {{- end }}
       containers:
       - name: wildlfy
         image: "{{ template "wildfly.image" . }}"
@@ -59,10 +72,10 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
-        - name: wildfly-data
+        - name: data
           mountPath: /bitnami/wildfly
       volumes:
-      - name: wildfly-data
+      - name: data
       {{- if .Values.persistence.enabled }}
         persistentVolumeClaim:
           claimName: {{ template "wildfly.fullname" . }}
