[bitnami/tensorflow-resnet] Change container name to tensorflow-serving

--- a/bitnami/tensorflow-resnet/templates/deployment.yaml
+++ b/bitnami/tensorflow-resnet/templates/deployment.yaml
@@ -50,7 +50,7 @@ spec:
         - name: seed
           mountPath: /seed
       containers:
-      - name: serving
+      - name: tensorflow-serving
         image: "{{ template "tensorflow-resnet.server.image" . }}"
         imagePullPolicy: {{ .Values.server.image.pullPolicy | quote }}
         ports:
